# graphql-federation-tempate

./: .gitignore  .sample.env  README.md  docker-compose.yml  supergraph-schema.graphql  supergraph.yaml
order-service/: pyproject.toml
order-service/alembic/versions/: b115ed26f101_add_status_to_order.py  eeaedc181238_add_order_migration.py
order-service/src/: __all_models.py  app.py
order-service/src/order/: model.py  schema.py  service.py
patient-service/: db_conf.py  migrations.py  pyproject.toml
patient-service/alembic/: env.py
patient-service/alembic/versions/: a3c9e7455486_add_initial_migration.py  a58d39783aa6_add_time_updated_migration.py  d3f7790f33b9_add_foreign_key_on_prescription.py
patient-service/src/: __all_models.py  app.py
patient-service/src/patient/: model.py  schema.py  service.py
patient-service/src/prescription/: model.py  schema.py  service.py
